--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<p>About me </p>
+						<a href="index.html" class="logo">About Me</a>
 					</header>
 
 				<!-- Nav -->
