--- a/projects.html
+++ b/projects.html
@@ -17,7 +17,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<p>My Projects </p>
+						<a href="index.html" class="logo">My Projects</a>
 					</header>
 
 				<!-- Nav -->
