--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<p>My Resume</p>
+						<a href="index.html" class="logo">My Resume</a>
 					</header>
 
 				<!-- Nav -->
