--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title> Supradeep | Home Page</title>
 		<meta charset="utf-8" />
 		<meta name="google-site-verification" content="yfxAsa9uZpOrhjDU684OZKSd10UHWC92CvX3BByr0_g" />
+		<meta name="msvalidate.01" content="5EF24A9F7117D15CC4FCC2DE4C67884A" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
