--- a/index.html
+++ b/index.html
@@ -77,6 +77,8 @@
 								</ul>
 							</section>
 						</section>
+						<a href="https://www.hitwebcounter.com" target="_blank">
+							<img src="https://hitwebcounter.com/counter/counter.php?page=7722655&style=0003&nbdigits=3&type=page&initCount=15" title="Total Website Hits" Alt="Web Hits"   border="0" /></a>   
 					</footer>
 
 				
