Updated Gastrointestinal cancer project in page2
https://github.com/Tenacious-3/Gastrointestinal-Cancer-MSI-MSS-Prediction-Using-Deep-Learning

--- a/projects2.html
+++ b/projects2.html
@@ -71,8 +71,13 @@
 						<!-- Post-4 -->
 
 						        <article>
-									
-								</article>
+								<header>
+									<span class="date">May 04, 2020</span>
+									<h2><a href="https://github.com/Tenacious-3/Gastrointestinal-Cancer-MSI-MSS-Prediction-Using-Deep-Learning">Gastrointestinal Cancer <br /> MSI-MSS Prediction </a></h2>
+								</header>
+								<a href="https://github.com/Tenacious-3/Gastrointestinal-Cancer-MSI-MSS-Prediction-Using-Deep-Learning" class="image fit"><img src="images/gastro.png" alt="Gastro" /></a>
+								<p>We used state-of-the-art techniques to build Deep Learning Model which is used to predict two different types of images (MSI-MSS)</p>									
+							</article>
 													
 							</section>
 
