--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
 					<nav id="nav">
 						<ul class="links">
 							<li><a href="index.html">About me</a></li>
-							<li class="active"><a href="about.html">My Projects</a></li>
+							<li class="active"><a href="projects.html">My Projects</a></li>
 							<li><a href="resume.html"> My Resume</a></li>
 						</ul>
 						<ul class="icons">
