--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,19 @@
 						<!-- Posts -->
 						<!--  Post-1 -->
 							<section class="posts">
+
+								<article>
+									<header>
+										<span class="date">Dec 10, 2020</span>
+										<h2><a href="https://github.com/Tenacious-3/Gastrointestinal-Cancer-MSI-MSS-Prediction-Using-Deep-Learning">Gastrointestinal Cancer <br /> MSI-MSS Prediction </a></h2>
+									</header>
+										<a href="https://github.com/Tenacious-3/Gastrointestinal-Cancer-MSI-MSS-Prediction-Using-Deep-Learning" class="image fit"><img src="images/gastro.png" alt="Gastro" /></a>
+										<p>We used state-of-the-art techniques to build Deep Learning Model which is used to predict two different types of images (MSI-MSS)</p>
+
+							</article>
+
+						<!--  Post-2 -->
+
 								<article>
 									<header>
 										<span class="date">Aug 10, 2020</span>
@@ -49,7 +62,7 @@
 									<p> Exploratory Data Analysis on FIFA World Cup dataset which is shown in a dashboard built using Plotly and Flask in python. </p>
 								</article>
 
-						<!--  Post-2 -->
+						<!--  Post-3 -->
 
 								<article>
 									<header>
@@ -61,7 +74,7 @@
 									<p> I was a part of the Web Development team at our University. We developed this website a part of our Academic Project. I handled most of the HTML & CSS part of the Website </p>
 								</article>
 
-						<!--  Post-3 -->
+                        <!-- Post-4 -->
 
 								<article>
 									<header>
@@ -72,17 +85,7 @@
 									<a href="https://github.com/supradeepdanturti/Lung-Cancer-Prediction" class="image fit"><img src="images/lungcancer.jpg" alt="" /></a>
 									<p>A simple Machine learning model created to classify if a person has lung cancer or not based on his/her symptoms</p>
 								</article>
-                        <!-- Post-4 -->
-
-								<article>
-									<header>
-										<span class="date">May 04, 2020</span>
-										<h2><a href="https://github.com/supradeepdanturti/The-Lost-Mayan-T">The Lost Mayan <br />
-										"T"</a></h2>
-									</header>
-									<a href="https://github.com/supradeepdanturti/The-Lost-Mayan-T" class="image fit"><img src="images/mayanproj.png" alt="" /></a>
-									<p>It's a Mayan Temple model created using Unity3d with some Basic level designing, Cinemachine, Animations.</p>
-								</article>					
+					
 							</section>
 
 						<!-- Footer -->
