Changed order of projects

--- a/projects2.html
+++ b/projects2.html
@@ -38,6 +38,19 @@
 					<div id="main">
 						<!-- Posts -->
 							<section class="posts">
+						<!-- Post-1 -->
+
+								<article>
+									<header>
+										<span class="date">May 04, 2020</span>
+										<h2><a href="https://github.com/supradeepdanturti/The-Lost-Mayan-T">The Lost Mayan <br />
+										"T"</a></h2>
+									</header>
+									<a href="https://github.com/supradeepdanturti/The-Lost-Mayan-T" class="image fit"><img src="images/mayanproj.png" alt="" /></a>
+									<p>It's a Mayan Temple model created using Unity3d with some Basic level designing, Cinemachine, Animations.</p>
+								</article>
+
+						<!-- Post-2 -->
 								<article>
 									<header>
 										<span class="date">Oct 6, 2020</span>
@@ -47,6 +60,9 @@
 									<a href="#" class="image fit"><img src="images/Surveillance .jpg" alt="" /></a>
 									<p>It's a constant Surveillance system to maintain security in the university by facial detection and maintaining Names and time stamps in the database. ( </b>Currently Working</b>) </p>
 								</article>
+
+						<!-- post-3 -->
+
 								<article>
 									<header>
 										<span class="date">Aug 10, 2020</span>
@@ -56,7 +72,7 @@
 									<p>Created a model to find out if a bitcoin transaction is legit or ransomware transaction</p>
 								</article>
 
-						<!-- post-3 -->
+						<!-- Post-4 -->
 								
 								<article>
 									<header>
@@ -66,19 +82,7 @@
 									</header>
 									<a href="https://github.com/supradeepdanturti/python_web_browser" class="image fit"><img src="images/browser.png" alt="" /></a>
 									<p>This is a basic Web Broswer built using PyQt module in python</p>
-								</article>
-
-						<!-- Post-4 -->
-
-						        <article>
-								<header>
-									<span class="date">Dec 10, 2020</span>
-									<h2><a href="https://github.com/Tenacious-3/Gastrointestinal-Cancer-MSI-MSS-Prediction-Using-Deep-Learning">Gastrointestinal Cancer <br /> MSI-MSS Prediction </a></h2>
-								</header>
-								<a href="https://github.com/Tenacious-3/Gastrointestinal-Cancer-MSI-MSS-Prediction-Using-Deep-Learning" class="image fit"><img src="images/gastro.png" alt="Gastro" /></a>
-								<p>We used state-of-the-art techniques to build Deep Learning Model which is used to predict two different types of images (MSI-MSS)</p>									
-							</article>
-													
+								</article>						
 							</section>
 
 						<!-- Footer -->
