updated projects and certifications

--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">My Resume</a>
+						<a href="resume.html" class="logo">My Resume</a>
 					</header>
 
 				<!-- Nav -->
@@ -63,6 +63,7 @@
 
 									<b>Projects</b>
 									<ul>
+										<li>Gastrointestinal Cancer MSI-MSS Prediction</li>
 										<li>Lung Cancer Prediction</li>
 										<li>Bitcoin Money Heist Ransomware Classification</li>
 										<li>Surveillance System Using Deep learning</li>
@@ -75,7 +76,8 @@
 									<b>Certifications</b>
 									<ul>
 										<li>MTA: Introduction to Programming Using Python - Certified 2020</li>
-										<li>IBM - Python for Data Science</li>
+										<li>IBM's - Python for Data Science</li>
+										<li>IBM's - Machine Learning using Python</li>
 									</ul>
 									<hr />
 									<b>Hobbies</b>
