--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 		<meta name="google-site-verification" content="yfxAsa9uZpOrhjDU684OZKSd10UHWC92CvX3BByr0_g" />
 		<meta name="msvalidate.01" content="5EF24A9F7117D15CC4FCC2DE4C67884A" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<meta name="description" content="This is my personal website">
+		<meta name="keywords" content="Supradeep,Supradeep Danturti">
+		<meta name="author" content="Supradeep">
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		
