--- a/resume.html
+++ b/resume.html
@@ -42,6 +42,7 @@
 									Python Dev <br> Machine learning Enthusiast </p>
 									<hr />
 									<p>
+										<b>Education</b>
 										<b>Centurion University Of Techology and Management</b><br>
 										2018 - 2022 <br> 
 										Computer Science Engineering <br> 
@@ -78,6 +79,7 @@
 										<li>MTA: Introduction to Programming Using Python - Certified 2020</li>
 										<li>IBM's - Python for Data Science</li>
 										<li>IBM's - Machine Learning using Python</li>
+										<li>Deeplearning.ai's - Neural Networks and Deep Learning</li>
 									</ul>
 									<hr />
 									<b>Hobbies</b>
