--- a/resume.html
+++ b/resume.html
@@ -42,7 +42,7 @@
 									Python Dev <br> Machine learning Enthusiast </p>
 									<hr />
 									<p>
-										<b>Education</b>
+										<b>Education</b><br>
 										<b>Centurion University Of Techology and Management</b><br>
 										2018 - 2022 <br> 
 										Computer Science Engineering <br> 
