--- a/resume.html
+++ b/resume.html
@@ -80,6 +80,7 @@
 										<li>IBM's - Python for Data Science</li>
 										<li>IBM's - Machine Learning using Python</li>
 										<li>Deeplearning.ai's - Neural Networks and Deep Learning</li>
+										<li>Deeplearning.ai’s - Improving Deep Neural Networks: Hyperparameter Tuning, Regularization and Optimization</li>
 									</ul>
 									<hr />
 									<b>Hobbies</b>
