--- a/resume.html
+++ b/resume.html
@@ -46,7 +46,7 @@
 										<b>Centurion University Of Techology and Management</b><br>
 										2018 - 2022 <br> 
 										Computer Science Engineering <br> 
-										<b>Domain:</b> Machine Learning
+										<b>Domain:</b> Data Science and Machine Learning
 									</p>
 									<hr />
 									<p><b>Skills</b> <br>
