--- a/resume.html
+++ b/resume.html
@@ -76,6 +76,7 @@
 									<hr />
 									<b>Certifications</b>
 									<ul>
+										<li>Microsoft Certified - Azure Fundamentals AZ-900</li>
 										<li>MTA: Introduction to Programming Using Python - Certified 2020</li>
 										<li>IBM's - Python for Data Science</li>
 										<li>IBM's - Machine Learning using Python</li>
