--- a/resume.html
+++ b/resume.html
@@ -55,6 +55,9 @@
 									<hr />
 									<p><b>Internship</b>
 										<ul>
+											<li><span class="date">May 04,2021 - <b>Present</b></span><br>
+												Technical Intern at Mothersonsumi INfotech and Design Ltd.
+											</li>
 											<li><span class="date">May 01 - June 30, 2020</span><br>
 												Internship on Cyber Security at Star Computers
 											</li>
