--- a/resume.html
+++ b/resume.html
@@ -68,6 +68,7 @@
 									<b>Projects</b>
 									<ul>
 										<li>Gastrointestinal Cancer MSI-MSS Prediction</li>
+										<li>Breast Cancer Prediction</li>
 										<li>Lung Cancer Prediction</li>
 										<li>Bitcoin Money Heist Ransomware Classification</li>
 										<li>Surveillance System Using Deep learning</li>
