--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<!-- Intro -->
 					<div id="intro">
 						<h1> Supradeep Danturti</h1>
-						<p> 3<sup>rd</sup> year Computer Science Student at Centurion University </p>
+						<p> Computer Science Student at Centurion University </p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
